--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ memoized-property
 termcolor
 
 dash==1.20.0
-dash-bootstrap-components==0.12.2
+# dash-bootstrap-components==0.12.2
 dash-core-components==1.16.0
 dash-html-components==1.1.3
 dash-renderer==1.9.1
